--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^15.19.0",
+    "@contentful/rich-text-types": "^16.3.0",
+    "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "10.4.14",
+    "contentful": "^10.6.12",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.7",
     "framer-motion": "^10.12.18",
@@ -19,6 +23,7 @@
     "react-dom": "18.2.0",
     "react-github-btn": "^1.4.0",
     "react-icons": "^4.10.1",
+    "react-syntax-highlighter": "^15.5.0",
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
